build: try adding to the gradle build